demo/guestbook-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: guestbook
        image: operry/demo-win-guestbook:latest
        ports:
        - name: http-server
          containerPort: 3000
          protocol: TCP
      nodeSelector:
        beta.kubernetes.io/os: windows
