demo/kubernetes-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    component: apiserver
    provider: kubernetes
  name: kubernetesapi
  namespace: default
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    nodePort: 30001
    targetPort: 443
  type: NodePort
